# agent-mmm

./: README.md
agents/: agent-mmm.md
plugins/agent-mmm/: .gitignore  README.md  pyproject.toml  pytest.ini
plugins/agent-mmm/.claude-plugin/: plugin.json
plugins/agent-mmm/agents/: agent-mmm.md  mmm-diagnostician.md  mmm-improver.md  mmm-modeler.md  mmm-reporter.md
plugins/agent-mmm/commands/: mmm-analyze-data.md  mmm-build.md  mmm-diagnose.md  mmm-fit.md  mmm-improve.md  mmm-intake-quick.md  mmm-intake.md  mmm-recommend-controls.md  mmm-recommend-priors.md  mmm-report.md  mmm-status.md
plugins/agent-mmm/lib/agent_mmm/: __init__.py  controls_engine.py  data_audit.py  diagnostics.py  fit_runner.py  iter_loop.py  model_factory.py  prior_engine.py  spec.py  target_units.py  workspace.py
plugins/agent-mmm/references/: controls_catalog.yaml  prior_catalog.yaml
plugins/agent-mmm/skills/mmm-api-reference/: SKILL.md
plugins/agent-mmm/skills/mmm-attribution/: SKILL.md
plugins/agent-mmm/skills/mmm-budget-optimization/: SKILL.md
plugins/agent-mmm/skills/mmm-data-quality/: SKILL.md
plugins/agent-mmm/skills/mmm-diagnostics/: SKILL.md
plugins/agent-mmm/skills/mmm-external-factors-catalog/: SKILL.md
plugins/agent-mmm/skills/mmm-greenfield-vs-brownfield/: SKILL.md
plugins/agent-mmm/skills/mmm-intake-questionnaire/: SKILL.md
plugins/agent-mmm/tests/: conftest.py  test_controls_engine.py  test_data_audit.py  test_diagnostics.py  test_iter_loop.py  test_model_factory.py  test_prior_engine.py  test_reports.py  test_spec.py  test_target_units.py  test_utils.py
(+22 files in other folders)
