[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-mmm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymc-marketing>=0.19.1",
    "pymc-extras",
    "arviz",
    "xarray",
    "numpy",
    "pandas",
    "scipy",
    "pydantic>=2",
    "pyyaml",
    "statsmodels",
    "holidays",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["lib"]
